testdata/invalid/import-alias-conflict/prog.hzn
package probes

import bpf "./mything"

@tracepoint("sched:sched_process_exec")
func OnExec(ctx tracepoint.Exec) i32 {
    return 0
}
